Implementata la funzionalità di visualizzazione segnalazioni filtrate, visualizzazione di un messaggio in base all'accesso dell'utente nel menù e recupero automatico posizione attuale alla creazione di una segnalazione
