# app/models/report.js
@@ -6,6 +6,7 @@ const ReportSchema = new mongoose.Schema({
   typology: {type: String, required: true},
   notes: {type: String, required: true},
   location: {type: String, required: true},
+  district: {type: String, required: true},
   upvote: {type: Number, required: true, default: 0},
   downvote: {type: Number, required: true, default: 0},
   createdtime: {type: String, required: true, default: () => {
