# app/routes/reportRoutes.js
@@ -1,12 +1,24 @@
 const express = require('express');
 const router = express.Router();
+
 const reportController = require('../controllers/reportController');
 const voteController = require('../controllers/voteController');
+
+const fs = require('fs');
+const yaml = require('js-yaml');
+
+/* swagger imports and setup */
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = yaml.load(fs.readFileSync(__dirname + '/../../swagger/aos3.yaml', 'utf8'));
+
+router.use('/api/docs', swaggerUi.serve);
+router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 // Existing routes
 router.get('/latest', reportController.getLatestReports);
 router.get('/:id', reportController.getSingleReport);
 router.post('/', reportController.createReport);
+router.post('/filtered', reportController.getFilteredReports);
 
 // New vote routes
 router.post('/:id/vote', voteController.handleVote);
