# app/routes/reports.js
@@ -1,22 +1,23 @@
-const express = require('express');
-const router = express.Router();
+// const express = require('express');
+// const router = express.Router();
 
-const reportController = require('../controllers/reportController.js');
+// const reportController = require('../controllers/reportController.js');
 
-const fs = require('fs');
-const yaml = require('js-yaml');
+// const fs = require('fs');
+// const yaml = require('js-yaml');
 
-/* swagger imports and setup */
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = yaml.load(fs.readFileSync(__dirname + '/../../swagger/aos3.yaml', 'utf8'));
+// /* swagger imports and setup */
+// const swaggerUi = require('swagger-ui-express');
+// const swaggerDocument = yaml.load(fs.readFileSync(__dirname + '/../../swagger/aos3.yaml', 'utf8'));
 
-router.use('/api/docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+// router.use('/api/docs', swaggerUi.serve);
+// router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-/* routes */
-router.get('/latest', reportController.getLatestReports);
-router.get('/:id', reportController.getSingleReport);
-router.get('/', reportController.getReports);
-router.post('/', reportController.createReport);
+// /* routes */
+// router.get('/latest', reportController.getLatestReports);
+// router.get('/:id', reportController.getSingleReport);
+// router.get('/', reportController.getReports);
+// router.post('/', reportController.createReport);
+// router.post('/filtered', reportController.getFilteredReports);
 
-module.exports = router;
+// module.exports = router;
